# wuyun

./: .gitignore  CMakeLists.txt  best_genome.json  hall_of_fame.json
.cursor/rules/: progress-docs.mdc
_archived/python_prototype/wuyun/: __init__.py
_archived/python_prototype/wuyun/core/: population.py
_archived/python_prototype/wuyun/neuron/: compartment.py  neuron_base.py
docs/: 00_design_principles.md  01_brain_region_plan.md  02_neuron_system_design.md  03_project_structure.md  04_genome_layer_design.md  04_roadmap.md  05_vectorization_design.md  progress.md
docs/progress/: phase1_foundation.md  phase2_minimal_brain.md  phase3_memory_learning.md  phase4_expansion.md  phase5_cognition.md  phase6_full_brain.md  phase7_closed_loop.md
docs/steps/: step01_foundation.md  step02_cortical_column.md  step03_minimal_brain.md  step04_memory_learning.md  step05_expansion.md  step05_extended_brain.md  step06_10_cognitive.md  step06_predictive_drive.md  step07_python_bindingsvisual.md  step08_sleep_replay.md  step09_sensory_cognitive.md  step10_wm_scale.md  step11_rem_sleep.md  step13_closed_loop.md  step14_swr_replay.md  step15_predictive_loop.md  step16_genome.md  step17_lhb_negative.md  step18_hippocampal_loop.md  step19_amygdala_fear.md  step20_sleep_consolidation.md  step21_environment_upgrade.md  step22_lateral_inhibition.md  step23_generalization_diag.md  step24_visual_hierarchy.md  step25_dastdp_diagnosis.md  step26_brain_mechanism_fix.md  step27_error_gated_stdp.md  step28_compression_perf.md  step29_baldwin_evolution.md  step30_cerebellum_thalamus.md  step31_ablation.md  step32_bug_fix_reevolution.md  step33_catastrophic_forgetting.md  step35_acc.md  step36_cls.md  step37_vta_da_fix.md  step38_thalamostriatal.md  step39_cortical_signal_fix.md  step40_phase1_regions.md  (+17 more)
experiments/: __init__.py  pred_coding_validation.py  utils.py
output/: brain.dot
python/experiments/: cognitive_tasks.py  consciousness_demo.py  day_in_life_demo.py  sensory_demo.py
python/wuyun/: __init__.py  viz.py
src/: CMakeLists.txt
src/bindings/: pywuyun.cpp
src/circuit/: cortical_column.cpp  cortical_column.h
src/core/: gap_junction.cpp  gap_junction.h  neuromodulator.cpp  neuromodulator.h  neuron.cpp  neuron.h  oscillation.cpp  oscillation.h  population.cpp  population.h  spike_bus.cpp  spike_bus.h  spike_queue.cpp  spike_queue.h  synapse_group.cpp  synapse_group.h  types.h
src/development/: developer.cpp  developer.h  guidance.h
src/engine/: closed_loop_agent.cpp  closed_loop_agent.h  environment.h  episode_buffer.h  global_workspace.cpp  global_workspace.h  grid_world.cpp  grid_world.h  grid_world_env.cpp  grid_world_env.h  multi_room_env.cpp  multi_room_env.h  sensory_input.cpp  sensory_input.h  simulation_engine.cpp  simulation_engine.h  sleep_cycle.cpp  sleep_cycle.h
src/genome/: dev_evolution.cpp  dev_evolution.h  dev_genome.cpp  dev_genome.h  evolution.cpp  evolution.h  genome.cpp  genome.h
src/plasticity/: da_stdp.cpp  da_stdp.h  homeostatic.cpp  homeostatic.h  istdp.cpp  istdp.h  stdp.cpp  stdp.h  stp.cpp  stp.h
src/region/: amygdala.cpp  amygdala.h  anterior_cingulate.cpp  anterior_cingulate.h  basal_ganglia.cpp  basal_ganglia.h  brain_region.cpp  brain_region.h  cerebellum.cpp  cerebellum.h  cortical_region.cpp  cortical_region.h  drn_5ht.cpp  drn_5ht.h  hippocampus.cpp  hippocampus.h  lc_ne.cpp  nbm_ach.cpp  thalamic_relay.cpp  vta_da.cpp  vta_da.h
src/region/limbic/: amygdala.cpp  amygdala.h  hippocampus.cpp  hippocampus.h  hypothalamus.cpp  hypothalamus.h  lateral_habenula.cpp  lateral_habenula.h  mammillary_body.cpp  mammillary_body.h  septal_nucleus.cpp  septal_nucleus.h
src/region/neuromod/: drn_5ht.cpp  lc_ne.cpp  lc_ne.h  nbm_ach.cpp  nbm_ach.h  snc_da.cpp  snc_da.h  vta_da.cpp  vta_da.h
src/region/prefrontal/: orbitofrontal.cpp  orbitofrontal.h
src/region/subcortical/: basal_ganglia.cpp  basal_ganglia.h  cerebellum.cpp  nucleus_accumbens.cpp  nucleus_accumbens.h  periaqueductal_gray.cpp  periaqueductal_gray.h  superior_colliculus.cpp  superior_colliculus.h  thalamic_relay.cpp  thalamic_relay.h
tests/: test_cortical_column.py  test_phase0_neuron.py  test_phase1_8.py  test_phase28_prereqs.py  test_phase2_thalamus.py  test_phase3_hippocampus.py  test_phase4_basal_ganglia.py  test_pred_coding.py  test_spike_bus.py  test_stdp.py  test_v1_core.py
tests/cpp/: CMakeLists.txt  test_attention.cpp  test_benchmark.cpp  test_bg_learning.cpp  test_cerebellum.cpp  test_closed_loop.cpp  test_cognitive_tasks.cpp  test_column.cpp  test_cortical_stdp.cpp  test_debug_column.cpp  test_decision_dorsal.cpp  test_dev_genome.cpp  test_e2e_learning.cpp  test_foundation.cpp  test_full_brain.cpp  test_global_workspace.cpp  test_homeostatic.cpp  test_hypothalamus.cpp  test_integrated_brain.cpp  test_learning.cpp  test_learning_curve.cpp  test_memory_emotion.cpp  test_minimal_brain.cpp  test_minimal_tasks.cpp  test_multi_room.cpp  test_neuromod_broadcast.cpp  test_neuron.cpp  test_predictive_coding.cpp  test_rem_sleep.cpp  test_scale_emergent.cpp  test_sensory_input.cpp  test_sleep_replay.cpp  test_step4_completion.cpp  test_utils.h  test_visual_hierarchy.cpp  test_working_memory.cpp
tools/: benchmark_continuous.cpp  benchmark_multiroom.cpp  fix_auto.py  fix_includes.py  run.cmd  run_dev_evolution.cpp  run_evolution.cpp  visualize_brain.cpp
wuyun/circuit/: __init__.py  column_factory.py  cortical_column.py  layer.py  multi_column.py
wuyun/circuit/basal_ganglia/: __init__.py  basal_ganglia.py  gpi.py  indirect_pathway.py  striatum.py
wuyun/circuit/hippocampus/: __init__.py  ca1_network.py  ca3_network.py  dentate_gyrus.py  hippocampal_loop.py
wuyun/core/: __init__.py  population.py  synapse_group.py
wuyun/neuron/: __init__.py  neuron_base.py
wuyun/spike/: __init__.py  oscillation_clock.py  signal_types.py  spike.py  spike_bus.py
wuyun/synapse/: __init__.py  short_term_plasticity.py  synapse_base.py
wuyun/synapse/plasticity/: __init__.py  homeostatic.py  plasticity_base.py
wuyun/thalamus/: __init__.py  thalamic_nucleus.py  thalamic_router.py
(+5 files in other folders)
